--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "docx": "^9.0.0",
+    "docxtemplater": "^3.51.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
+    "pdf-lib": "^1.17.1",
+    "pizzip": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
